feat: 20260130 by function

--- a/learning_logs/20260130.md
+++ b/learning_logs/20260130.md
@@ -10,3 +10,44 @@ git config user.email
 gitgub korit_12_python repository 생성
 korit_12_python
 Korea IT Academy 12월 국비 과정 Python
+
+git clone 복사한 코드
+
+# python 수업
+
+## hurdle # 1
+```python
+def turn_right():
+    turn_left()
+    turn_left()
+    turn_left()
+    
+def jump():
+    for i in range(6):
+        move()
+        turn_left()
+        move()
+        turn_right()
+        move()
+        turn_right()
+        move()
+        turn_left()
+    
+jump()
+```
+
+```python
+def turn_right():
+    turn_left()
+    turn_left()
+    turn_left()
+
+while not at_goal():
+    if wall_on_right() and front_is_clear():
+        move()
+    elif right_is_clear():
+        turn_right()
+        move()
+    elif not front_is_clear() and not right_is_clear():
+        turn_left()
+```
